--- a/Project_TransferWise/ViewController/Main Tab View Controller/Account View Controller/AccountViewController.xib
+++ b/Project_TransferWise/ViewController/Main Tab View Controller/Account View Controller/AccountViewController.xib
@@ -63,6 +63,13 @@
                         <action selector="personalAccount" destination="-1" eventType="touchUpInside" id="ICz-qQ-po2"/>
                     </connections>
                 </button>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="down arrow" translatesAutoresizingMaskIntoConstraints="NO" id="lux-fY-8jh">
+                    <rect key="frame" x="273.66666666666669" y="204.33333333333337" width="15" height="20"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="20" id="41m-zk-C2Z"/>
+                        <constraint firstAttribute="width" constant="15" id="i22-VJ-phx"/>
+                    </constraints>
+                </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Account services " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="GVz-Wj-zdv">
                     <rect key="frame" x="20" y="288.66666666666669" width="374" height="21"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="12.300000190734863"/>
@@ -76,6 +83,13 @@
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0iw-9k-uKi" userLabel="Bank Details Button">
                     <rect key="frame" x="16.666666666666657" y="326.33333333333331" width="380.66666666666674" height="87"/>
                 </button>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="right arrow" translatesAutoresizingMaskIntoConstraints="NO" id="N72-aO-oZy">
+                    <rect key="frame" x="377.33333333333331" y="362.33333333333331" width="20" height="15"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="20" id="fI7-2L-QtS"/>
+                        <constraint firstAttribute="height" constant="15" id="hVJ-8m-uGA"/>
+                    </constraints>
+                </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Xl-TL-Dd7" userLabel="Home View">
                     <rect key="frame" x="16.666666666666671" y="349" width="42" height="42"/>
                     <subviews>
@@ -105,6 +119,13 @@
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f1p-r3-gWF" userLabel="Direct Debits Button">
                     <rect key="frame" x="16.666666666666657" y="414" width="380.66666666666674" height="86.666666666666686"/>
                 </button>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="right arrow" translatesAutoresizingMaskIntoConstraints="NO" id="172-ZH-pLD">
+                    <rect key="frame" x="377.33333333333331" y="450" width="20" height="15"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="15" id="5US-V0-za4"/>
+                        <constraint firstAttribute="width" constant="20" id="tYz-Bx-8Eb"/>
+                    </constraints>
+                </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DM7-sN-dpz" userLabel="Detail View">
                     <rect key="frame" x="16.666666666666671" y="436.33333333333331" width="42" height="42"/>
                     <subviews>
@@ -145,8 +166,11 @@
             <constraints>
                 <constraint firstItem="ECx-G6-2sr" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="0iw-9k-uKi" secondAttribute="trailing" id="2UT-f0-RCB"/>
                 <constraint firstItem="f1p-r3-gWF" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="4Ch-Z7-b9L"/>
+                <constraint firstItem="lux-fY-8jh" firstAttribute="centerY" secondItem="PwJ-T3-eLf" secondAttribute="centerY" id="4rd-4m-rHu"/>
                 <constraint firstItem="NuR-Qp-XaE" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="6Zs-1U-zWZ"/>
+                <constraint firstItem="N72-aO-oZy" firstAttribute="centerY" secondItem="0iw-9k-uKi" secondAttribute="centerY" id="7ks-EG-fxE"/>
                 <constraint firstItem="6Xl-TL-Dd7" firstAttribute="centerY" secondItem="0iw-9k-uKi" secondAttribute="centerY" id="80V-Jc-HbA"/>
+                <constraint firstItem="lux-fY-8jh" firstAttribute="trailing" secondItem="PwJ-T3-eLf" secondAttribute="trailing" constant="-22" id="8P6-6u-dTB"/>
                 <constraint firstItem="PwJ-T3-eLf" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" multiplier="0.5" id="AP6-WM-PG9"/>
                 <constraint firstItem="wNO-IX-MGw" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" multiplier="0.92" id="CAz-8K-NUO"/>
                 <constraint firstItem="5f6-N7-vPB" firstAttribute="top" secondItem="17L-iJ-sjh" secondAttribute="bottom" constant="10" id="Dn9-dJ-p1k"/>
@@ -173,18 +197,21 @@
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="NuR-Qp-XaE" secondAttribute="bottom" constant="28" id="bQE-Zy-gFf"/>
                 <constraint firstItem="FAG-Bf-wQ4" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="c7P-Jh-uwF"/>
                 <constraint firstItem="GVz-Wj-zdv" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="0.0285326" id="c80-cg-bzY"/>
+                <constraint firstItem="172-ZH-pLD" firstAttribute="trailing" secondItem="f1p-r3-gWF" secondAttribute="trailing" id="dlk-6k-tVk"/>
                 <constraint firstItem="17L-iJ-sjh" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="f1p-r3-gWF" secondAttribute="trailing" id="dxf-fi-TGW"/>
                 <constraint firstItem="17L-iJ-sjh" firstAttribute="height" secondItem="f1p-r3-gWF" secondAttribute="height" multiplier="0.241379" id="eJ4-uw-rxS"/>
                 <constraint firstItem="ukA-VU-bFJ" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="52" id="eL3-bk-pei"/>
                 <constraint firstItem="yHn-wl-Kpm" firstAttribute="top" secondItem="GVz-Wj-zdv" secondAttribute="bottom" constant="16" id="fGP-1w-exQ"/>
                 <constraint firstItem="DM7-sN-dpz" firstAttribute="leading" secondItem="f1p-r3-gWF" secondAttribute="leading" id="h0x-aY-bw3"/>
                 <constraint firstItem="17L-iJ-sjh" firstAttribute="top" secondItem="FsS-gk-aN1" secondAttribute="top" constant="-10" id="hIg-XK-8nT"/>
+                <constraint firstItem="172-ZH-pLD" firstAttribute="centerY" secondItem="f1p-r3-gWF" secondAttribute="centerY" id="hSW-fK-Hbk"/>
                 <constraint firstItem="ECx-G6-2sr" firstAttribute="leading" secondItem="6Xl-TL-Dd7" secondAttribute="trailing" constant="19" id="ite-9y-RPP"/>
                 <constraint firstItem="NuR-Qp-XaE" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="0.24" id="juf-4m-WVR"/>
                 <constraint firstItem="yHn-wl-Kpm" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="m5f-rK-ZbD"/>
                 <constraint firstItem="GVz-Wj-zdv" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" multiplier="0.903382" id="mG7-C6-6yg"/>
                 <constraint firstItem="yHn-wl-Kpm" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="0.001" id="nrp-dv-5vx"/>
                 <constraint firstItem="GVz-Wj-zdv" firstAttribute="top" secondItem="PwJ-T3-eLf" secondAttribute="bottom" constant="60" id="oMt-7z-6yn"/>
+                <constraint firstItem="N72-aO-oZy" firstAttribute="trailing" secondItem="0iw-9k-uKi" secondAttribute="trailing" id="okn-rO-HFY"/>
                 <constraint firstItem="wNO-IX-MGw" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="0.001" id="qfa-ei-szh"/>
                 <constraint firstItem="f1p-r3-gWF" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" multiplier="0.92" id="qqa-nd-fOp"/>
                 <constraint firstItem="PwJ-T3-eLf" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="rU2-nv-aeS"/>
@@ -211,5 +238,7 @@
         <image name="account_detail" width="29" height="29"/>
         <image name="account_home" width="29" height="29"/>
         <image name="account_image" width="155.33332824707031" height="120.66666412353516"/>
+        <image name="down arrow" width="20" height="20"/>
+        <image name="right arrow" width="20" height="20"/>
     </resources>
 </document>
