--- a/Project_TransferWise/ViewController/Main Tab View Controller/Account View Controller/Personal Account Slide View/PersonalAccountView.xib
+++ b/Project_TransferWise/ViewController/Main Tab View Controller/Account View Controller/Personal Account Slide View/PersonalAccountView.xib
@@ -87,7 +87,7 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="u8L-W2-ccq" userLabel="BusinessView">
                     <rect key="frame" x="20" y="259.33333333333331" width="42" height="42"/>
                     <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icon-20" translatesAutoresizingMaskIntoConstraints="NO" id="jYl-ow-1qS">
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="busness" translatesAutoresizingMaskIntoConstraints="NO" id="jYl-ow-1qS">
                             <rect key="frame" x="11" y="11" width="20" height="20"/>
                         </imageView>
                     </subviews>
@@ -155,7 +155,7 @@
         </view>
     </objects>
     <resources>
-        <image name="Icon-20" width="20" height="20"/>
+        <image name="busness" width="20" height="20"/>
         <image name="peronal" width="20" height="20"/>
     </resources>
 </document>
