--- a/Project_TransferWise/ViewController/Main Screen View Controller/MainScreen.xib
+++ b/Project_TransferWise/ViewController/Main Screen View Controller/MainScreen.xib
@@ -51,8 +51,12 @@
                         <constraint firstAttribute="height" constant="2" id="2t5-Nh-gmp"/>
                     </constraints>
                 </stackView>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home_" translatesAutoresizingMaskIntoConstraints="NO" id="S39-45-UGI">
-                    <rect key="frame" x="0.0" y="108.00000000000001" width="414" height="147.33333333333337"/>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="transfer_wise_disc" translatesAutoresizingMaskIntoConstraints="NO" id="S39-45-UGI">
+                    <rect key="frame" x="133.66666666666666" y="108" width="146.99999999999997" height="147"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="147" id="CIr-cr-92I"/>
+                        <constraint firstAttribute="width" constant="147" id="UXg-jw-aea"/>
+                    </constraints>
                 </imageView>
                 <collectionView opaque="NO" clearsContextBeforeDrawing="NO" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="cPP-oB-69H">
                     <rect key="frame" x="30" y="326" width="354" height="170"/>
@@ -105,13 +109,13 @@
                 </button>
             </subviews>
             <color key="backgroundColor" red="0.21568627450980393" green="0.31764705882352939" blue="0.49411764705882355" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <gestureRecognizers/>
             <constraints>
                 <constraint firstItem="R6r-wp-Cx2" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.427536" id="C0g-db-vfu"/>
                 <constraint firstItem="S39-45-UGI" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Cw3-oA-PsK"/>
                 <constraint firstItem="R6r-wp-Cx2" firstAttribute="top" secondItem="cPP-oB-69H" secondAttribute="bottom" constant="90" id="DNi-9q-jTf"/>
                 <constraint firstItem="S39-45-UGI" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="108" id="Hbt-48-dqG"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="cPP-oB-69H" secondAttribute="trailing" constant="30" id="OTc-Nr-5K6"/>
-                <constraint firstItem="S39-45-UGI" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" id="PPF-oS-6cV"/>
                 <constraint firstItem="rvg-Ji-mmb" firstAttribute="top" secondItem="YNM-i6-Kdo" secondAttribute="bottom" constant="20" id="YO7-sL-vKs"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="WsR-8E-o7Z" secondAttribute="trailing" constant="20" id="ZfB-NP-rVq"/>
                 <constraint firstItem="WsR-8E-o7Z" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="a6v-Un-MoC"/>
@@ -124,16 +128,19 @@
                 <constraint firstItem="WsR-8E-o7Z" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="12" id="pNL-AT-pFO"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="rvg-Ji-mmb" secondAttribute="trailing" constant="20" id="r8N-o4-M7M"/>
                 <constraint firstItem="rvg-Ji-mmb" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="rBn-I5-s9g"/>
-                <constraint firstItem="S39-45-UGI" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.2" id="tfP-AG-3rC"/>
                 <constraint firstItem="cPP-oB-69H" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.230978" id="y0d-us-24S"/>
                 <constraint firstItem="rvg-Ji-mmb" firstAttribute="top" secondItem="R6r-wp-Cx2" secondAttribute="bottom" constant="20" id="yde-iW-A4a"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <connections>
+                <outletCollection property="gestureRecognizers" destination="ZT9-Yj-n5D" appends="YES" id="Lpp-Br-QSd"/>
+            </connections>
             <point key="canvasLocation" x="137.68115942028987" y="150.81521739130437"/>
         </view>
+        <tapGestureRecognizer id="ZT9-Yj-n5D"/>
     </objects>
     <resources>
         <image name="apple_black" width="20" height="20"/>
-        <image name="home_" width="29" height="29"/>
+        <image name="transfer_wise_disc" width="113.66666412353516" height="113.66666412353516"/>
     </resources>
 </document>
